force-app/main/default/objects/simpli_lv__List_View_User_Config__c/simpli_lv__List_View_User_Config__c.object-meta.xml
<CustomObject>
    <description>Holds list configuration for a user for a given list view named component.</description>
    <label>List View User Config</label>
    <nameField>
        <displayFormat>LVUC-{0}</displayFormat>
        <label>List View User Config Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>List View User Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>