force-app/main/default/objects/simpli_lv__List_View_User_Config__c/fields/simpli_lv__Ltn_Component_Name__c.field-meta.xml
<CustomField>
    <fullName>simpli_lv__Ltn_Component_Name__c</fullName>
    <description>The Simpli List View lightning component name that this configuration is associated with.</description>
    <inlineHelpText>The Simpli List View lightning component name that this configuration is associated with.</inlineHelpText>
    <label>Ltn Component Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>