force-app/main/default/objects/simpli_lv__List_View_User_Config__c/fields/simpli_lv__Name__c.field-meta.xml
<CustomField>
    <fullName>simpli_lv__Name__c</fullName>
    <description>Name which identifies what this config value is for.</description>
    <inlineHelpText>Name which identifies what this config value is for.</inlineHelpText>
    <label>Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>