force-app/main/default/objects/simpli_lv__List_View_User_Config__c/fields/simpli_lv__Primary_Key__c.field-meta.xml
<CustomField>
    <fullName>simpli_lv__Primary_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Primary key for the list view user config object. Current format is as follows - User.Id + &apos;:&apos; + List_View_Component_Name + Parameter_Name. This value will be set internally.</description>
    <externalId>true</externalId>
    <inlineHelpText>Primary key for the list view user config object. Current format is as follows - User.Id + &apos;:&apos; + List_View_Component_Name + Parameter_Name. This value will be set internally.</inlineHelpText>
    <label>Primary Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>