force-app/main/default/objects/simpli_lv__List_View_User_Config__c/fields/simpli_lv__User__c.field-meta.xml
<CustomField>
    <fullName>simpli_lv__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user for which this list config is configured for.</description>
    <inlineHelpText>The user for which this list config is configured for.</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>List_View_User_Configs</relationshipName>
    <type>Lookup</type>
</CustomField>