force-app/main/default/objects/simpli_lv__List_View_User_Config__c/listViews/simpli_lv__All.listView-meta.xml
<ListView>
    <fullName>simpli_lv__All</fullName>
    <columns>NAME</columns>
    <columns>simpli_lv__Ltn_Component_Name__c</columns>
    <columns>simpli_lv__Name__c</columns>
    <columns>simpli_lv__Value__c</columns>
    <columns>simpli_lv__Primary_Key__c</columns>
    <columns>simpli_lv__User__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>