force-app/main/default/objects/simpli_lv__List_View_User_Config__c/listViews/simpli_lv__All_Non_Sort_Order.listView-meta.xml
<ListView>
    <fullName>simpli_lv__All_Non_Sort_Order</fullName>
    <columns>NAME</columns>
    <columns>simpli_lv__Ltn_Component_Name__c</columns>
    <columns>simpli_lv__Name__c</columns>
    <columns>simpli_lv__User__c</columns>
    <columns>simpli_lv__Value__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>simpli_lv__Name__c</field>
        <operation>notContain</operation>
        <value>sortOrder</value>
    </filters>
    <label>All Non-Sort Order</label>
</ListView>